src/test/deca/syntax/valid/lex/while.deca
// Description:
//    Programme minimaliste lisant un print
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022


while(){

}