src/test/deca/syntax/invalid/synt/whilesansCondition.deca
// Description:
//    mismatched input '{' expecting '('
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022

{
   while{
       print("no");
   }

}